@@ -36,6 +36,10 @@ Fixes
 Enhancements
   * Improved performances when parsing TPR files (PR #2804)
 
+Deprecations
+  * waterdynamics.HydrogenBondLifetimes will be removed in 2.0.0 and
+    replaced with hydrogenbonds.HydrogenBondAnalysis.lifetime() (#2547)
+
 
 06/09/20 richardjgowers, kain88-de, lilyminium, p-j-smith, bdice, joaomcteixeira,
          PicoCentauri, davidercruz, jbarnoud, RMeli, IAlibay, mtiberti, CCook96,
